--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -22,13 +22,28 @@
   }
 }
 
+.page-main__title--form {
+   @media (min-width: @tablet-width) {
+    margin-bottom: 53px;
+  }
+}
+
 .page-main__call-to-action {
   margin-bottom: 39px;
   margin-left: 20px;
-  max-width: 230px;
+  width: 230px;
 
   .main-font();
   text-transform: none;
   text-align: left;
   color: @color-title;
+
+   @media (min-width: @tablet-width) {
+    margin-bottom: 69px;
+    margin-left: 70px;
+    width: 330px;
+
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
