--- a/source/less/style.less
+++ b/source/less/style.less
@@ -20,5 +20,5 @@
 @import "blocks/cat-data.less";
 @import "blocks/program-type.less";
 @import "blocks/contacts-request.less";
-@import "blocks/cat-habits.less";
+@import "blocks/comment.less";
 @import "blocks/addition.less";
