делала стилизацию десктопной версии формы

--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -9,6 +9,13 @@
   text-align: left;
 }
 
+/*.feedback__wrapper {
+  position: relative;
+
+  padding-left: 20px;
+  padding-right: 20px;
+}*/
+
 .feedback__submit {
   margin-left: 20px;
   margin-right: 20px;
