--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -26,6 +26,10 @@
    @media (min-width: @tablet-width) {
     margin-bottom: 53px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 113px;
+  }
 }
 
 .page-main__call-to-action {
@@ -45,5 +49,10 @@
 
     font-size: 20px;
     line-height: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 53px;
+    margin-left: 111px;
   }
 }
