--- a/source/less/blocks/addition.less
+++ b/source/less/blocks/addition.less
@@ -85,6 +85,10 @@
   @media (min-width: @tablet-width) {
     margin-right: 100px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 0;
+  }
 }
 
 .addition-list__option--vitamins {
