--- a/source/less/blocks/cat-data.less
+++ b/source/less/blocks/cat-data.less
@@ -9,17 +9,7 @@
   }
 }
 
-.cat-data__name {
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
-
-  @media (min-width: @tablet-width) {
-    padding-left: 71px;
-  }
-}
-
+.cat-data__name,
 .cat-data__weight,
 .cat-data__years {
   display: flex;
@@ -29,6 +19,16 @@
 
   @media (min-width: @tablet-width) {
     padding-left: 71px;
+  }
+
+   @media (min-width: @tablet-width) {
+    padding-left: 112px;
+  }
+}
+
+.cat-data__weight,
+.cat-data__years {
+  @media (min-width: @tablet-width) {
     padding-right: 0;
   }
 }
@@ -55,7 +55,7 @@
 }
 
 .cat-data__label--weight {
-  margin-right: 18px;
+  margin-right: 13px;
 }
 
 .cat-data__label--years {
@@ -72,7 +72,7 @@
   }
 
   &--weight {
-    width: 80%;
+    width: 73%;
 
     @media (min-width: @tablet-width) {
       width: 76%;
