--- a/source/less/blocks/cat-data.less
+++ b/source/less/blocks/cat-data.less
@@ -24,6 +24,10 @@
    @media (min-width: @tablet-width) {
     padding-left: 112px;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 570px;
+  }
 }
 
 .cat-data__weight,
