--- a/source/less/blocks/program-selection.less
+++ b/source/less/blocks/program-selection.less
@@ -12,6 +12,10 @@
     border-bottom: none;
     border: 1px solid @border-color-one;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 570px;
+  }
 }
 
 .selection-list__option {
