--- a/source/less/blocks/contacts-request.less
+++ b/source/less/blocks/contacts-request.less
@@ -1,3 +1,9 @@
+.contacts-request {
+  @media (min-width: @desktop-width) {
+    width: 100%;
+  }
+}
+
 .contacts-request__legend {
   position: relative;
 
@@ -84,6 +90,7 @@
   @media (min-width: @desktop-width) {
     display: flex;
     align-items: baseline;
+    margin-left: 112px;
     padding-top: 5px;
   }
 }
@@ -105,7 +112,7 @@
 
   @media (min-width: @desktop-width) {
     margin-right: 78px;
-    width: 45%;
+    width: 42%;
   }
 }
 
@@ -117,7 +124,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 45%;
+    width: 42%;
   }
 }
 
@@ -171,7 +178,7 @@
     }
 
     @media (min-width: @desktop-width) {
-      left: 4px;
+      left: 15px;
     }
   }
 
