--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -9,12 +9,13 @@
   text-align: left;
 }
 
-/*.feedback__wrapper {
-  position: relative;
-
-  padding-left: 20px;
-  padding-right: 20px;
-}*/
+.feedback__wrapper {
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-wrap: wrap;
+    /*justify-content: space-between;*/
+  }
+}
 
 .feedback__submit {
   margin-left: 20px;
@@ -24,10 +25,14 @@
     display: flex;
     /*flex-wrap: wrap;*/
     justify-content: space-between;
-
     margin-bottom: 72px;
     margin-left: 71px;
     margin-right: 160px;
+  }
+
+  @media (min-width: @desktop-width) {
+    justify-content: flex-start;
+    margin-left: 111px;
   }
 }
 
@@ -41,6 +46,10 @@
     font-size: 20px;
     line-height: @big-line-height;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 82px;
+  }
 }
 
 .feedback__note {
@@ -52,7 +61,7 @@
   @media (min-width: @tablet-width) {
     font-size: @medium-font-size;
     line-height: @medium-line-height;
-     text-align: left;
+    text-align: left;
   }
 }
 
