--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -84,6 +84,8 @@
   padding-left: 16px;
   width: 279px;
 
+  border: 1px solid #e6e6e6;
+
   resize: none;
 
   @media (min-width: @tablet-width) {
