--- a/source/less/blocks/contacts-request.less
+++ b/source/less/blocks/contacts-request.less
@@ -112,7 +112,7 @@
 
   @media (min-width: @desktop-width) {
     margin-right: 78px;
-    width: 42%;
+    width: 49%;
   }
 }
 
@@ -159,6 +159,8 @@
   padding-top: 15px;
   padding-bottom: 14px;
   padding-left: 16px;
+
+  border: 1px solid #e6e6e6;
 
   @media (min-width: @tablet-width) {
     padding-top: 17px;
