--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -42,7 +42,7 @@
   text-align: left;
   color: @color-title;
 
-   @media (min-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     margin-bottom: 69px;
     margin-left: 70px;
     width: 330px;
@@ -54,5 +54,8 @@
   @media (min-width: @desktop-width) {
     margin-bottom: 53px;
     margin-left: 111px;
+
+    font-size: 23px;
+    line-height: 30px;
   }
 }
