делала векторные спрайты

--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -132,11 +132,11 @@
 .additional-products-list__item:nth-child(1) .additional-products-list__wrapper {
   border-top: 1px solid @border-color-one;
 
-  @media (min-width: @desktop-width) {
+  /*@media (min-width: @desktop-width) {
     border: none;
     border-top: 1px solid @border-color-one;
     border-bottom: 1px solid @border-color-one;
-  }
+  }*/
 }
 
 .additional-products-list__info {
@@ -183,7 +183,7 @@
     width: 35%;
   }
 
-   @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-width) {
     margin-top: 10px;
     width: 285px;
   }
@@ -292,7 +292,7 @@
   padding-bottom: 59px;
 }
 
-.promotion__icon path {
+.promotion__icon-gift {
   fill: #ffffff;
 }
 
