делала векторные спрайты

--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -15,7 +15,9 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: @desktop-width;
+    width: 1200px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
 
