--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -12,8 +12,10 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-left: 110px;
-    padding-right: 110px;
+    margin: 0 auto;
+    padding-left: 70px;
+    padding-right: 70px;
+    width: 100%;
   }
 }
 
