добавила векторные спрайты на страницы

--- a/source/less/blocks/variables.less
+++ b/source/less/blocks/variables.less
@@ -1,22 +1,32 @@
+/*Variables for widths*/
 @tablet-width: 768px;
 @desktop-width: 1300px;
 @mobile-width-only: 767px;
+
+/*Variables for fonts*/
 @fancy-font-one: "oswaldregular";
 @fancy-font-two: "oswaldmedium";
-@main-text-align: center;
+
+/*Variables for font-size*/
 @small-font-size: 12px;
 @main-font-size: 14px;
 @medium-font-size: 16px;
 @big-font-size: 36px;
+
+/*Variables for line-height*/
 @small-line-height: 14px;
 @medium-line-height: 16px;
 @main-line-height: 18px;
 @big-line-height: 20px;
 @biggest-line-height: 36px;
-@main-text-transform: uppercase;
+
+/*Variables for color*/
 @main-color: #68b738;
 @color-title: #111111;
 @color-text: #444444;
 @border-color-one: #cdcdcd;
 @border-color-two: #ededed;
 @background-color: #f2f2f2;
+
+@main-text-transform: uppercase;
+@main-text-align: center;
