--- a/source/less/blocks/fonts.less
+++ b/source/less/blocks/fonts.less
@@ -1,9 +1,9 @@
 @font-face {
   font-family: @fancy-font-one;
-  font-weight: normal;
-  font-style: normal;
   src: url("../fonts/oswaldregular.woff2") format("woff2"),
       url("../fonts/oswaldregular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -11,5 +11,7 @@
   font-family: @fancy-font-two;
   src: url("../fonts/oswaldmedium.woff2") format("woff2"),
       url("../fonts/oswaldmedium.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
   font-display: swap;
 }
