задала новую ширину обертке хедера

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -18,6 +18,18 @@
   }
 }
 
+.page-header__wrapper {
+  width: 280px;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+  }
+}
+
 .page-header__logo {
   display: block;
   margin-bottom: 20px;
