--- a/source/less/blocks/contact-us.less
+++ b/source/less/blocks/contact-us.less
@@ -11,6 +11,18 @@
   }
 }
 
+.contact-us__wrapper {
+  width: 280px;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+  }
+}
+
 .contact-us__text {
   display: flex;
   justify-content: space-between;
