--- a/source/less/blocks/program-type.less
+++ b/source/less/blocks/program-type.less
@@ -1,3 +1,15 @@
+.program-type__wrapper {
+  width: 280px;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+  }
+}
+
 .program-type-list {
   margin-left: 20px;
   margin-right: 20px;
@@ -141,7 +153,7 @@
     height: 200px;
   }
 
-    @media (min-width: @desktop-width) {
+  @media (min-width: @desktop-width) {
     top: 40%;
     left: 0;
 
