--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,9 +1,15 @@
 .advantages__wrapper {
+  width: 280px;
+
   @media (min-width: @tablet-width) {
+    width: 708px;
+
     border-bottom: 1px solid #e6e6e6;
   }
 
   @media (min-width: @desktop-width) {
+    width: 1220px;
+
     border-bottom: none;
   }
 }
@@ -199,8 +205,7 @@
   background-repeat: no-repeat;
   background-position: 50%;
 
-  @media (min-resolution: 144dpi),
-    (min-resolution: 1.5dppx) {
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     background-image: url("../img/advantage-leaf@2x.png");
   }
 }
@@ -210,8 +215,7 @@
   background-repeat: no-repeat;
   background-position: 50%;
 
-  @media (min-resolution: 144dpi),
-    (min-resolution: 1.5dppx) {
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     background-image: url("../img/advantage-powder@2x.png");
   }
 }
@@ -221,8 +225,7 @@
   background-repeat: no-repeat;
   background-position: 50%;
 
-  @media (min-resolution: 144dpi),
-    (min-resolution: 1.5dppx) {
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     background-image: url("../img/advantage-dining@2x.png");
   }
 }
@@ -232,8 +235,7 @@
   background-repeat: no-repeat;
   background-position: 50%;
 
-  @media (min-resolution: 144dpi),
-    (min-resolution: 1.5dppx) {
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     background-image: url("../img/advantage-clock@2x.png");
   }
 }
