--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -13,6 +13,18 @@
   }
 }
 
+.page-header__wrapper {
+  width: 280px;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+  }
+}
+
 .intro__presentation {
   margin-bottom: 150px;
 
@@ -21,8 +33,7 @@
   background-color: @main-color;
   background-image: url("../img/index-background-mobile@1x.jpg");
 
-  @media (min-resolution: 144dpi),
-    (min-resolution: 1.5dppx) {
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     background-image: url("../img/index-background-mobile@2x.jpg");
   }
 
@@ -85,9 +96,8 @@
     background-image: url("../img/index-background-desktop@1x.jpg");
     background-repeat: no-repeat;
 
-    @media (min-resolution: 144dpi),
-    (min-resolution: 1.5dppx) {
-    background-image: url("../img/index-background-desktop@2x.jpg");
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../img/index-background-desktop@2x.jpg");
     }
   }
 }
