--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -15,9 +15,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 1200px;
-    padding-left: 40px;
-    padding-right: 40px;
+    width: @desktop-width;
   }
 }
 
