--- a/source/less/blocks/contact-us.less
+++ b/source/less/blocks/contact-us.less
@@ -11,18 +11,6 @@
   }
 }
 
-.contact-us__wrapper {
-  width: 280px;
-
-  @media (min-width: @tablet-width) {
-    width: 708px;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 1220px;
-  }
-}
-
 .contact-us__text {
   display: flex;
   justify-content: space-between;
@@ -37,10 +25,10 @@
 
   @media (min-width: @desktop-width) {
     position: relative;
-    top: 310px;
+    top: 275px;
     z-index: 5;
 
-    margin-left: 110px;
+    margin-left: 35px;
     padding-top: 25px;
     padding-bottom: 45px;
     padding-left: 76px;
@@ -51,7 +39,7 @@
 }
 
 .contact-us__text--inner {
-  background-color: @background-color;
+  background-color: #00f;
 }
 
 .contact-us__slogan {
