--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -10,10 +10,18 @@
 }
 
 .feedback__wrapper {
+  width: 280px;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+  }
+
   @media (min-width: @desktop-width) {
     display: flex;
     flex-wrap: wrap;
     /*justify-content: space-between;*/
+
+    width: 1220px;
   }
 }
 
